<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="course_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="email">krivtsovs97@ya.ru</string>
    <string name="text_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="practicum_offer_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="error_msg_no_email_client">Почтовый клиент не найден</string>
    <string name="error_msg_no_browsers">Браузер не найден</string>
    <string name="not_found_tracks_msg">Ничего не нашлось</string>
    <string name="network_failed_msg">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album_label">Альбом</string>
    <string name="year_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
    <string name="zero_time">0:00</string>
    <string name="playlists">Плейлисты</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_favourites_msg">Ваша медиатека пуста</string>
    <string name="empty_playlists_msg">Вы не создали\nни одного плейлиста</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="dialog_delete_track">Хотите удалить трек?</string>
    <string name="dialog_delete_playlist">Хотите удалить плейлист «%s»?</string>
    <string name="dialog_created">Плейлист %s создан</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="dialog_finish_creating_title">Завершить создание плейлиста?</string>
    <string name="dialog_finish_creating_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="add_to_playlist_title">Добавить в плейлист</string>
    <string name="tracks_count_one">%d трек</string>
    <string name="tracks_count_few">%d трека</string>
    <string name="tracks_count_many">%d треков</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="create_playlist_error">Не удалось создать плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="playlist_info">%1$s • %2$s</string>
    <string name="playlist_empty">В этом плейлисте нет треков</string>
    <string name="playlist_nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_menu">Меню</string>
    <string name="share_track_line">%1$d. %2$s - %3$s (%4$s)</string>
</resources>