<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearanceStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <FrameLayout style="@style/SettingsFrameLayoutStyle">

            <TextView
                style="@style/SettingsTextViewStyle"
                android:text="@string/dark_theme" />

            <Switch
                style="@style/SettingsItemStyle"
                android:layout_marginEnd="3dp"
                android:checked="true"
                android:thumbTint="@color/green" />
        </FrameLayout>

        <FrameLayout style="@style/SettingsFrameLayoutStyle">

            <TextView
                style="@style/SettingsTextViewStyle"
                android:text="@string/share_app" />

            <ImageButton
                style="@style/SettingsIconStyle"
                android:src="@drawable/ic_share_24" />
        </FrameLayout>

        <FrameLayout style="@style/SettingsFrameLayoutStyle">

            <TextView
                style="@style/SettingsTextViewStyle"
                android:text="@string/write_support" />

            <ImageButton
                style="@style/SettingsIconStyle"
                android:src="@drawable/ic_support_24" />
        </FrameLayout>

        <FrameLayout style="@style/SettingsFrameLayoutStyle">

            <TextView
                style="@style/SettingsTextViewStyle"
                android:text="@string/user_agreement" />

            <ImageButton
                style="@style/SettingsIconStyle"
                android:src="@drawable/ic_arrow_forward_24" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>