<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/main_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/main_font_size"
            android:paddingBottom="24dp"/>

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_layout_height"
            android:layout_weight="@dimen/main_weight"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="@dimen/main_font_size"
            app:cornerRadius="@dimen/main_corner_radius"
            app:icon="@drawable/ic_search_24"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/black"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_library"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_layout_height"
            android:layout_weight="@dimen/main_weight"
            android:backgroundTint="@color/white"
            android:text="@string/library"
            android:textColor="@color/black"
            android:textSize="@dimen/main_font_size"
            app:cornerRadius="@dimen/main_corner_radius"
            app:icon="@drawable/ic_library_24"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/black"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_layout_height"
            android:layout_weight="@dimen/main_weight"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/main_font_size"
            app:cornerRadius="@dimen/main_corner_radius"
            app:icon="@drawable/ic_settings_24"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/black"
            android:textAllCaps="false"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>